--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "browser-resolve": "git://github.com/alexgorbatchev/node-browser-resolve.git",
     "module-deps": "git://github.com/alexgorbatchev/module-deps.git",
     "browserify": "git://github.com/alexgorbatchev/node-browserify.git",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "testem": "~0.2.94"
   },
   "dependencies": {
     "streamline": "~0.4.9",
