--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "module-deps": "git://github.com/alexgorbatchev/module-deps.git",
     "browserify": "git://github.com/alexgorbatchev/node-browserify.git",
     "grunt-contrib-concat": "~0.3.0",
-    "testem": "~0.2.94"
+    "testem": "~0.2.94",
+    "grunt-manifest": "~0.4.0"
   },
   "dependencies": {
     "streamline": "~0.4.9",
