--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-handlebars": "~0.5.8",
     "coffee-script": "~1.6.2",
     "backbone-faux-server": "~0.7.0",
-    "express": "~3.2.6"
+    "express": "~3.2.6",
+    "glob": "~3.2.1"
   }
 }
