--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "grunt-contrib-concat": "~0.3.0",
     "testem": "~0.2.94",
     "grunt-manifest": "~0.4.0",
-    "grunt-contrib-uglify": "~0.2.2"
+    "grunt-contrib-uglify": "~0.2.2",
+    "uuid": "~1.4.1",
+    "handlebars": "~1.0.12"
   },
   "dependencies": {
     "streamline": "~0.4.9",
