--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "coffee-script": "~1.6.2",
     "backbone-faux-server": "~0.7.0",
     "express": "~3.2.6",
-    "glob": "~3.2.1"
+    "glob": "~3.2.1",
+    "read": "~1.0.4",
+    "request-json": "~0.3.7",
+    "synchronize": "~0.5.2"
   }
 }
