--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "read": "~1.0.4",
     "request-json": "~0.3.7",
     "synchronize": "~0.5.2",
-    "through": "~2.3.4"
+    "through": "~2.3.4",
+    "parse-appcache-manifest": "0.0.1"
   }
 }
