--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "grunt-contrib-uglify": "~0.2.2",
     "uuid": "~1.4.1",
     "handlebars": "~1.0.12",
-    "grunt-shell": "~0.2.2"
+    "grunt-shell": "~0.2.2",
+    "grunt-text-replace": "~0.3.9"
   },
   "dependencies": {
     "streamline": "~0.4.9",
