--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "dbl-client",
-  "version": "3.0.86",
-  "description": "Client for DBL",
+  "name": "mWater-App",
+  "version": "3.1.0",
+  "description": "Client of mWater App",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "",
-  "author": "",
-  "license": "BSD",
+  "author": "Clayton Grassick",
+  "license": "GPLv3",
   "devDependencies": {
     "browserify-shim": "~2.0.3",
     "uglify-js": "~2.2.5",
