All dependencies updated

--- a/package.json
+++ b/package.json
@@ -9,35 +9,33 @@
   "repository": "",
   "author": "Clayton Grassick",
   "license": "GPLv3",
-  "devDependencies": {
-    "uglify-js": "~2.2.5",
-    "coffeeify": "~0.4.0",
-    "grunt-contrib-watch": "~0.3.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-sass": "~0.3.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "testem": "~0.2.94",
+  "devDependencies": {},
+  "dependencies": {
+    "underscore": "~1.5.2",
+    "grunt": "~0.4.1",
+    "grunt-contrib-handlebars": "~0.6.0",
     "grunt-manifest": "~0.4.0",
     "grunt-contrib-uglify": "~0.2.2",
-    "uuid": "~1.4.1",
-    "handlebars": "~1.0.12",
-    "grunt-shell": "~0.2.2",
+    "grunt-contrib-compress": "~0.5.2",
+    "grunt-shell": "~0.6.1",
+    "grunt-contrib-watch": "~0.5.3",
     "grunt-text-replace": "~0.3.9",
-    "browserify": "~3.4.0"
-  },
-  "dependencies": {
-    "underscore": "~1.4.4",
-    "grunt": "~0.4.1",
-    "grunt-contrib-handlebars": "~0.5.8",
     "coffee-script": "~1.6.2",
-    "backbone-faux-server": "~0.7.0",
-    "express": "~3.2.6",
+    "backbone-faux-server": "~0.10.1",
+    "express": "~3.4.7",
     "glob": "~3.2.1",
     "read": "~1.0.4",
-    "request-json": "~0.3.7",
+    "request-json": "~0.4.4",
     "synchronize": "~0.5.2",
     "through": "~2.3.4",
-    "parse-appcache-manifest": "0.0.1",
-    "grunt-contrib-compress": "~0.5.2"
+    "parse-appcache-manifest": "~0.2.0",
+    "uglify-js": "~2.4.7",
+    "handlebars": "~1.1.2",
+    "coffeeify": "~0.5.2",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "testem": "~0.5.15",
+    "uuid": "~1.4.1",
+    "browserify": "~3.4.0"
   }
 }
