--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "testem": "~0.5.15",
     "uuid": "~1.4.1",
-    "browserify": "~3.4.0"
+    "browserify": "~3.4.0",
+    "fastclick": "~0.6.11"
   }
 }
