--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "testem": "~0.5.15",
     "uuid": "~1.4.1",
     "browserify": "~3.4.0",
-    "fastclick": "~0.6.11"
+    "fastclick": "~0.6.11",
+    "lodash": "~2.4.1",
+    "csv": "~0.3.6"
   }
 }
