Db removed. Bundles jquery in main file though

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fastclick": "~0.6.11",
     "lodash": "~2.4.1",
     "csv": "~0.3.6",
-    "queue-async": "~1.0.7"
+    "queue-async": "~1.0.7",
+    "minimongo": "~0.2.1"
   }
 }
