--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "repository": "",
   "author": "Clayton Grassick",
   "license": "GPLv3",
-  "devDependencies": {},
+  "devDependencies": {
+    "exposify": "~0.1.3"
+  },
   "dependencies": {
     "underscore": "~1.5.2",
     "grunt": "~0.4.1",
