--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
+  "repository": "git@github.com:mWater/app-v3.git",
   "author": "Clayton Grassick",
   "license": "GPLv3",
   "devDependencies": {},
