--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Client of mWater App",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "testem ci"
   },
   "browserify": {
     "transform": [
