--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "lodash": "~2.4.1",
     "backbone": "~1.1.2",
     "swag": "~0.6.1",
-    "overthrow-dist": "~0.7.0"
+    "overthrow-dist": "~0.7.0",
+    "handlebars": "~1.3.0"
   }
 }
