--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "GPLv3",
   "devDependencies": {
     "chai": "~1.9.0",
+    "rework-npm": "~0.4.1",
     "grunt-browserify": "~2.0.1"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
     "grunt-manifest": "~0.4.0",
     "grunt-shell": "~0.6.1",
     "grunt-text-replace": "~0.3.9",
+    "grunt-rework": "0.0.6",
     "handlebars": "~1.3.0",
     "hbsfy": "^1.3.2",
     "lodash": "~2.4.1",
