--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-browserify": "~2.0.1"
   },
   "dependencies": {
+    "async": "^0.8.0",
     "backbone-faux-server": "~0.10.1",
     "browserify": "~3.21.0",
     "coffee-script": "~1.6.2",
@@ -37,14 +38,14 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-manifest": "~0.4.0",
+    "grunt-rework": "0.0.6",
     "grunt-shell": "~0.6.1",
     "grunt-text-replace": "~0.3.9",
-    "grunt-rework": "0.0.6",
     "handlebars": "~1.3.0",
     "hbsfy": "^1.3.2",
     "lodash": "~2.4.1",
     "minimist": "0.0.8",
-    "minimongo": "~0.2.4",
+    "minimongo": "~2.0.1",
     "mwater-forms": "^0.4.0",
     "parse-appcache-manifest": "~0.2.0",
     "queue-async": "~1.0.7",
