--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "coffeeify": "~0.6.0",
     "csv": "~0.3.6",
     "express": "~3.4.7",
+    "ez-localize": "^0.3.4",
     "fastclick": "~0.6.11",
     "glob": "~3.2.1",
     "grunt": "~0.4.1",
@@ -37,9 +38,9 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-manifest": "~0.4.0",
+    "grunt-rework": "0.0.6",
     "grunt-shell": "~0.6.1",
     "grunt-text-replace": "~0.3.9",
-    "grunt-rework": "0.0.6",
     "handlebars": "~1.3.0",
     "hbsfy": "^1.3.2",
     "lodash": "~2.4.1",
