--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "hbsfy": "^1.3.2",
     "lodash": "~2.4.1",
     "minimist": "0.0.8",
-    "minimongo": "~2.2.0",
+    "minimongo": "^2.2.3",
     "mwater-forms": "^0.5.0",
     "parse-appcache-manifest": "~0.2.0",
     "read": "~1.0.4",
