--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   "license": "GPLv3",
   "devDependencies": {
     "chai": "~1.9.0",
-    "rework-npm": "~0.4.1",
-    "grunt-browserify": "~2.0.1"
+    "coffee-script": "^1.7.1",
+    "coffeeify": "^0.6.0",
+    "grunt-browserify": "~2.0.1",
+    "hbsfy": "^1.3.2",
+    "rework-npm": "~0.4.1"
   },
   "dependencies": {
     "async": "^0.8.0",
     "backbone-faux-server": "~0.10.1",
-    "browserify": "~3.21.0",
-    "coffee-script": "~1.6.2",
-    "coffeeify": "~0.6.0",
     "csv": "~0.3.6",
     "express": "~3.4.7",
     "ez-localize": "^0.3.6",
