--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "minimist": "0.0.8",
     "minimongo": "^2.3.0",
     "mwater-forms": "^0.5.18",
+    "offline-leaflet-map": "^0.1.0",
     "parse-appcache-manifest": "~0.2.0",
     "read": "~1.0.4",
     "request-json": "~0.4.4",
