--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "fastclick": "~0.6.11",
     "glob": "~3.2.1",
     "grunt": "~0.4.1",
+    "grunt-browserify": "^2.1.4",
     "grunt-contrib-compress": "git+https://github.com/netpro2k/grunt-contrib-compress.git",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "~0.4.1",
