Uses mwater-common

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lodash": "~2.4.1",
     "minimist": "0.0.8",
     "minimongo": "^2.5.0",
+    "mwater-common": "^1.0.3",
     "mwater-forms": "^0.5.23",
     "offline-leaflet-map": "^0.1.0",
     "parse-appcache-manifest": "~0.2.0",
