--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "backbone": "~1.1.2",
     "swag": "~0.7.0",
     "overthrow-dist": "~0.7.0",
-    "handlebars": "~1.3.0"
+    "handlebars": "~1.3.0",
+    "leaflet.markercluster": "~0.4.0"
   }
 }
