--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "~1.9.0",
     "coffee-script": "^1.7.1",
     "coffeeify": "^0.6.0",
+    "del": "^1.1.1",
     "express": "~3.4.7",
     "glob": "~3.2.1",
     "grunt": "~0.4.1",
@@ -34,16 +35,19 @@
     "grunt-shell": "~0.6.1",
     "grunt-text-replace": "~0.3.9",
     "gulp": "^3.6.2",
-    "gulp-awspublish": "0.0.16",
+    "gulp-awspublish": "~1.0.1",
     "gulp-buffer": "0.0.2",
-    "gulp-clean": "^0.2.4",
     "gulp-concat": "^2.2.0",
     "gulp-gzip": "0.0.6",
+    "gulp-manifest": "0.0.6",
+    "gulp-rename": "^1.2.0",
+    "gulp-replace": "^0.5.2",
     "gulp-rework": "^0.2.2",
     "gulp-size": "^0.3.0",
     "gulp-uglify": "^0.2.1",
     "gulp-util": "^2.2.14",
     "hbsfy": "^1.3.2",
+    "merge-stream": "^0.1.7",
     "request-json": "~0.4.4",
     "rework-npm": "~0.4.1",
     "testem": "~0.5.15",
