--- a/package.json
+++ b/package.json
@@ -17,61 +17,49 @@
   "license": "GPLv3",
   "devDependencies": {
     "browserify": "~3.30.1",
-    "chai": "~1.9.0",
+    "chai": "~2.0.0",
     "coffee-script": "^1.7.1",
-    "coffeeify": "^0.6.0",
+    "coffeeify": "^1.0.0",
     "del": "^1.1.1",
-    "express": "~3.4.7",
-    "glob": "~3.2.1",
-    "grunt": "~0.4.1",
-    "grunt-contrib-compress": "git+https://github.com/netpro2k/grunt-contrib-compress.git",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-handlebars": "~0.6.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-manifest": "~0.4.0",
-    "grunt-rework": "0.0.6",
-    "grunt-shell": "~0.6.1",
-    "grunt-text-replace": "~0.3.9",
+    "express": "~4.11.2",
+    "glob": "~4.3.5",
     "gulp": "^3.6.2",
     "gulp-awspublish": "~1.0.1",
     "gulp-buffer": "0.0.2",
     "gulp-concat": "^2.2.0",
-    "gulp-gzip": "0.0.6",
+    "gulp-gzip": "~0.0.8",
     "gulp-manifest": "0.0.6",
     "gulp-rename": "^1.2.0",
     "gulp-replace": "^0.5.2",
-    "gulp-rework": "^0.2.2",
-    "gulp-size": "^0.3.0",
-    "gulp-uglify": "^0.2.1",
-    "gulp-util": "^2.2.14",
-    "hbsfy": "^1.3.2",
+    "gulp-rework": "^1.0.2",
+    "gulp-size": "^1.2.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.3",
+    "hbsfy": "^2.2.1",
     "merge-stream": "^0.1.7",
-    "request-json": "~0.4.4",
-    "rework-npm": "~0.4.1",
-    "testem": "~0.5.15",
+    "request-json": "~0.5.2",
+    "rework-npm": "~1.0.0",
+    "synchronize": "~0.9.9",
+    "testem": "~0.7.0-0",
     "through": "~2.3.4",
     "uglify-js": "~2.4.13",
-    "vinyl-source-stream": "^0.1.1"
+    "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
-    "async": "^0.8.0",
+    "async": "^0.9.0",
     "backbone-faux-server": "~0.10.1",
     "bowser": "^0.7.1",
     "csv": "~0.3.6",
-    "ez-localize": "^0.3.6",
+    "ez-localize": "^0.4.2",
     "fastclick": "^1.0.3",
-    "handlebars": "~1.3.0",
-    "lodash": "~2.4.1",
-    "minimist": "0.0.8",
+    "handlebars": "^3.0.0",
+    "lodash": "^3.2.0",
     "minimongo": "^3.0.0",
     "mwater-common": "^1.1.0",
     "mwater-forms": "^3.0.0",
     "offline-leaflet-map": "^0.1.0",
     "parse-appcache-manifest": "~0.2.0",
     "read": "~1.0.4",
-    "synchronize": "~0.5.2",
-    "uuid": "~1.4.1"
+    "uuid": "~2.0.1"
   }
 }
