--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "author": "Clayton Grassick",
   "license": "GPLv3",
   "devDependencies": {
-    "browserify": "~3.30.1",
+    "browserify": "^8.1.3",
     "chai": "~2.0.0",
     "coffee-script": "^1.7.1",
     "coffeeify": "^1.0.0",
