--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "del": "^1.1.1",
     "express": "~4.11.2",
     "glob": "~4.3.5",
-    "gulp": "^3.6.2",
+    "gulp": "git://github.com/gulpjs/gulp.git#4.0",
     "gulp-awspublish": "~1.0.1",
     "gulp-buffer": "0.0.2",
     "gulp-concat": "^2.2.0",
