--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "testem": "~0.7.0-0",
     "through": "~2.3.4",
     "uglify-js": "~2.4.13",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "xml2js": "^0.4.5"
   },
   "dependencies": {
     "async": "^0.9.0",
