--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "csv": "~0.3.6",
     "ez-localize": "^0.4.2",
     "fastclick": "^1.0.3",
-    "handlebars": "^3.0.0",
+    "handlebars": "~1.3.0",
     "lodash": "^3.2.0",
     "minimongo": "^3.0.0",
     "mwater-common": "^1.1.0",
